Ajustando busca de usuário e pontos afetados por essa alteração